<resources>
    <string name="app_name">IzdajRacun</string>

    <string name="sign_in_button_content">Prijavi se</string>
    <string name="sign_in_canceled_message">Za prijavu je potrebna internet veza</string>

    <string name="hello_add_property_fragment">Hello add property fragment</string>
    <string name="rental_property_name_hint">Naziv objekta</string>
    <string name="owner_label">Vlasnik</string>
    <string name="owner_first_name_hint">Ime</string>
    <string name="owner_last_name_hint">Prezime</string>
    <string name="owner_oib_hint">OIB</string>
    <string name="owner_iban_hint">IBAN</string>
    <string name="rental_property_label">Smještajni objekt</string>
    <string name="rental_property_address_hint">Adresa (Ulica i kućni broj, mjesto)</string>
    <string name="non_valid_oib_toast_content">Neispravan OIB</string>
    <string name="non_valid_iban_toast_content">Neispravan IBAN</string>

    <string name="select_property_label">Izaberite smještajnu\njedinicu</string>

    <string name="hello_property_dashboard_fragment">Hello property dashboard fragment</string>

    <string name="edit_property_info_menu_item">Izmjeni podatke objekta</string>
    <string name="delete_all_property_info_menu_item">Obriši smještajni objekt</string>
    <string name="invoice_number_label">Broj računa</string>
    <string name="customer_name_hint">Puni naziv unajmitelja usluge</string>
    <string name="quantity_label">Broj noćenja :</string>
    <string name="unit_prica_label">Cijena noćenja iz cjenika :</string>
    <string name="unit_price_hint">0.00</string>
    <string name="currency_label">kn</string>
    <string name="total_price_label">Ukupno za naplatiti boravak :</string>
    <string name="total_price_hint">0.00</string>
    <string name="description_hint">Napomena</string>
    <string name="date_hint">Datum izdavanja</string>
    <string name="unit_price_not_valid_message">Ukupna cijena prelazi cijenu iz vašeg službenog cjenika, povećajte cijenu po noćenju</string>


    <string name="invoice_item_number_label">Broj računa:</string>
    <string name="new_yearly_report_button_content">Obrazac EP</string>
    <string name="new_business_invoice_button_content">R1 račun</string>
    <string name="new_invoice_button_content">račun</string>

    <string name="invoice_edit">Uredi</string>
    <string name="invoice_delete">Izbriši</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="issue_date_hint">Datum dospijeća</string>
    <string name="pay_due_hint">Datum isporuke</string>
    <string name="customer_oib_hint">OIB :</string>
    <string name="payment_method_label">Način plačanja :</string>
    <string name="customer_address">Ulica i kućni broj, mjesto, država</string>
    <string name="select_logo">Odaberi logo</string>

    <string name="select_year_label">Odaberi godinu izvjšća: </string>
    <string name="taxpayer_info_label">Opći podaci o poreznom\nobvezniku</string>
    <string name="taxpayer_place_label">Mjesto prebivališta/boravišta</string>
    <string name="taxpayer_address_label">Adresa prebivališta/boravišta</string>
    <string name="taxpayer_fullname_label">Ime i prezime</string>
    <string name="taxpayer_oib_label">OIB</string>

    <string-array name="payment_methods">
        <item>Gotovinsko plačanje</item>
        <item>Kartično plačanje</item>
        <item>Transakcijski račun</item>
    </string-array>

</resources>
